updated buildspec.yaml file

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,12 +13,11 @@ phases:
   pre_build:
     commands:
       - echo "Installing dependencies..."
-      - cd SIMPLE-PYTHON-APP/
-      - pip install -r requirements.txt
+      - pip install -r simple-python-app/requirement.txt
   build:
     commands:
       - echo "Running tests..."
-      - cd SIMPLE-PYTHON-APP/
+      - cd simple-python-app
       - echo "Building Docker image..."
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
       - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest" .
@@ -30,4 +29,4 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: SIMPLE-PYTHON-APP
+  base-directory: simple-python-app
